[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dejavumt"
version = "0.1.0"
description = "First-order past-time LTL runtime verification using an SMT solver (Z3) instead of BDDs."
readme = "README.md"
authors = [
    { name = "Klaus Havelund", email = "klaus.havelund@jpl.nasa.gov" },
    { name = "Doron Peled" },
]
requires-python = ">=3.9"
dependencies = [
    "z3-solver >= 4.13",
    "lark >= 1.2",
]

[project.scripts]
dejavumt = "dejavumt.__main__:main"

[tool.setuptools]
packages = ["dejavumt"]
